Refactor concurrency test setup: update thread count, streamline Redis and Kafka container configurations, and enhance logging for transaction processing