@@ -11,14 +11,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.testcontainers.service.connection.ServiceConnection;
 import org.springframework.data.redis.core.StringRedisTemplate;
-import org.springframework.test.context.ActiveProfiles;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import org.testcontainers.kafka.ConfluentKafkaContainer;
 import org.testcontainers.utility.DockerImageName;
 
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.*;
@@ -32,7 +30,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 @SpringBootTest
 @Testcontainers
-@ActiveProfiles("test")
+
+// TODO: Redis consurenccy is done, Kafka is left
 class TransactionServiceConcurrencyTest {
 
     @Autowired
@@ -44,29 +43,23 @@ class TransactionServiceConcurrencyTest {
     @Autowired
     StringRedisTemplate redisTemplate;
 
-    private static final int THREAD_COUNT = 1;
+    private static final int THREAD_COUNT = 1_000;
     private static final long EXPECTED_PENDING_TRANSACTIONS = 0;
 
     // setup for redis ccontainer
     @Container
     @ServiceConnection // gets redis host and port form spring data redis properties
-    static final RedisContainer redisContainer =
-            new RedisContainer(DockerImageName.parse("redis:7.2.0"))
-                    .withStartupTimeout(Duration.ofMinutes(2));
+    static final RedisContainer redisContainer = new RedisContainer(DockerImageName.parse("redis:7.2.0"));
 
     @Container
     @ServiceConnection
-    static final ConfluentKafkaContainer kafkaContainer =
-            new ConfluentKafkaContainer(DockerImageName.parse("confluentinc/cp-kafka:7.5.0"))
-            .withStartupTimeout(Duration.ofMinutes(2));
+    static final ConfluentKafkaContainer kafkaContainer = new ConfluentKafkaContainer(
+            DockerImageName.parse("confluentinc/cp-kafka:7.5.0"));
 
     @Container
     @ServiceConnection
     static final PostgreSQLContainer<?> postgresContainer = new PostgreSQLContainer<>("postgres:15.6")
-            .withDatabaseName("vaultguard_test")
-            .withUsername("testuser")
-            .withPassword("testpassword")
-            .withStartupTimeout(Duration.ofMinutes(2));
+            .withDatabaseName("vaultguard_test");
 
     private static final TransactionRequest TRANSACTION_REQUEST_TEST = new TransactionRequest(
             SENDER_ACCOUNT_NUMBER,
@@ -99,12 +92,17 @@ class TransactionServiceConcurrencyTest {
         boolean isCI = "true".equalsIgnoreCase(System.getenv("CI"));
         int threadCount = isCI ? 50 : THREAD_COUNT;
 
+        if (!isCI)
+            System.out.println("Running in local environment. Using thread count: " + threadCount);
+        else
+            System.out.println("Running in CI environment. Using thread count: " + threadCount);
+
         // Cyclic Barrier for synchronizing threads
         CyclicBarrier barrier = new CyclicBarrier(threadCount);
         List<Future<?>> futuresList = new ArrayList<>();
 
         // Execcutor Service to manage threads
-        try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
+        try (ExecutorService executorService = Executors.newFixedThreadPool(threadCount)) {
             for (int i = 0; i < threadCount; i++) {
                 Future<?> future = executorService.submit(() -> {
                     try {
@@ -134,13 +132,16 @@ class TransactionServiceConcurrencyTest {
                     String rateKey = "transaction:"+SENDER_ACCOUNT_NUMBER+":rate:";
                     String userRate = redisTemplate.opsForValue().get(rateKey);
                     assertNotNull(userRate);
+                    System.out.println("User rate from Redis: " + userRate);
+
                     assertThat(Long.parseLong(userRate)).isEqualTo((long) threadCount);
+                    System.out.println("Expected rate: " + threadCount + ", Actual rate: " + userRate);
 
                     // get the cccont of transaction with pending
                     long pendingTransactionCount = transactionRepository.countGetTransactionsByTransactionStatus(TransactionStatus.PENDING);
                     assertThat(pendingTransactionCount).isEqualTo(EXPECTED_PENDING_TRANSACTIONS);
+                    System.out.println("Expected pending transactions: " + EXPECTED_PENDING_TRANSACTIONS + ", Actual pending transactions: " + pendingTransactionCount);
                 });
-        System.out.println("Running in CI environment: " + isCI);
 
     }
 
